syntax = "proto3";

package rs.tauri.devtools.instrument;

import "google/protobuf/timestamp.proto";
import "common.proto";
import "ipc.proto";
import "log.proto";

// Real time updates about components of an instrumented application
service Instrument {
    // Produces a stream of updates representing the behavior of the instrumented async runtime.
    rpc WatchUpdates(InstrumentRequest) returns (stream Update) {}
    rpc UpdateInterests(UpdateInterestsRequest) returns (UpdateInterestsResponse) {}
}

message InstrumentRequest {
    uint32 interests = 1;
}

message UpdateInterestsRequest {
    uint32 interests = 1;
}

message Update {
    // The system time when this update was recorded.
    google.protobuf.Timestamp now = 1;
    // Any new metadata that was registered since the last update.
    common.RegisterMetadata new_metadata = 2;
    // Any new information about ongoing and new IPC requests that was emitted since the last update.
    ipc.Update ipc_update = 3;
    // Any new log events that were emitted since the last update.
    log.Update log_update = 4;
}

message UpdateInterestsResponse {}
